# nippou_generator

./: .gitignore  CHANGELOG.md  FileParser.rb  Nippou.rb  NippouGenerator.rb  NippouOptions.rb  fake_note.txt  nippou-generator.cabal
app/: Main.hs
config/: nippouConfig.json
ruby/: Nippou.rb  README.md
src/: Configuration.hs  MyLib.hs  OperatingSystem.hs
