cabal-version: 2.4
name: nippou-generator
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author: MattBrooks95
maintainer: 28607360+MattBrooks95@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
	exposed-modules:  MyLib

	-- Modules included in this library but not exported.
	other-modules:
		Configuration,
		OperatingSystem

	-- LANGUAGE extensions used by modules in this package.
	-- other-extensions:
	build-depends:
		base,
		containers,
		optparse-applicative,
		directory,
		filepath,

	hs-source-dirs: src
	default-language: Haskell2010
	ghc-options: -Wno-tabs

executable nippou-generator
	main-is:          Main.hs

	-- Modules included in this executable, other than Main.
	-- other-modules:


	-- LANGUAGE extensions used by modules in this package.
	-- other-extensions:
	build-depends:
		base,
		directory,
		nippou-generator,
		filepath,

	hs-source-dirs: app
	default-language: Haskell2010
	ghc-options: -Wno-tabs
